--- a/ps03/war/Collaborator.html
+++ b/ps03/war/Collaborator.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Collaborator</title>
     <script type="text/javascript" language="javascript" src="Collaborator/Collaborator.nocache.js"></script>
+    <link rel="stylesheet" href="/Collaborator.css" /> 
   </head>
 
   <body>
